--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -1,8 +1,8 @@
 [
   {
     "title": "Pinang Connect Application",
-    "description": "Daftarkan Fintech Anda Sebagai Rekanan Kami",
-    "demo": "https://pre-prod-pinang-connect.bankraya.co.id/",
+    "description": "Pinang Connect is an application to register fintechs as Bank Raya partners. This application consists of 1 backend and 1 frontend. Using node.js programming language. In this project I am a devops engineer. In charge of preparing all infrastructure needs, such as databases. and also create automation cicd deployment to kubernetes (GKE).",
+    "demo": "https://pre-prod-pinang-connect.bankraya.co.id",
     "url": "https://pre-prod-pinang-connect.bankraya.co.id",
     "github": "https://gitlab.com"
   },
