--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -7,11 +7,11 @@
     "github": "https://gitlab.com"
   },
   {
-    "title": "Blood Bank",
-    "description": "Introducing BloodBank, my proud side project aimed at helping patients in need of blood. The idea behind BloodBank came after I discovered the disturbing fact that \"up to 38,000 blood donations are needed each year\". BloodBank connects users who require blood with those willing to donate. Users can easily find donors and requests based on blood type and location. Whenever a blood request is made, BloodBank sends out emails to potential donors in the vicinity, hoping for their support. BloodBank is built using the MERN (MongoDB, Express, React, Node) stack and has already attracted over 1000 users across Nepal.",
-    "demo": "https://www.youtube.com/embed/l-gyTHQXtTY?autoplay=1",
-    "url": "https://bloodbank-nepal.com",
-    "github": "https://github.com/hari-bhandari/blood-bank"
+    "title": "Bank Raya Whistleblowing System",
+    "description": "The mechanism for submitting reports on allegations of certain criminal acts occurring within Bank Raya, reported by employees and/or other people in the organization where they work. Whistleblowers are not part of the perpetrators of the reported crimes. This application consists of 1 backend and 1 frontend. Using node.js programming language. In this project I am a devops engineer. In charge of preparing all infrastructure needs, such as databases. and also create automation cicd deployment to kubernetes (GKE).",
+    "demo": "https://whistleblowing.bankraya.co.id",
+    "url": "https://whistleblowing.bankraya.co.id",
+    "github": "https://gitlab.com"
   },
   {
     "title": "SORTING ALGORITHM VISUALISER",
