--- a/src/json/unFeaturedProjects.json
+++ b/src/json/unFeaturedProjects.json
@@ -1,57 +1,7 @@
 [
   {
-    "title": "MERN API",
+    "title": "Associate Cloud Engineer",
     "picture": "unFeaturedProjects/devCamper_Hari_Bhandari.png",
-    "demo": "https://www.haribhandari.uk/",
-    "github": "https://github.com/hari-bhandari/hariCamper"
-  },
-  {
-    "title": "Expense Tracker",
-    "picture": "unFeaturedProjects/budget_Hari_Bhandari.png",
-    "demo": "https://peaceful-austin-9517e0.netlify.app/",
-    "github": "https://github.com/hari-bhandari/budget"
-  },
-
-  {
-    "title": "Error Logger",
-    "picture": "unFeaturedProjects/logs_Hari_Bhandari.png",
-    "demo": "https://error-logge.herokuapp.com/",
-    "github": "https://github.com/hari-bhandari/logs.git"
-  },
-  {
-    "title": "A* Pathfinding Visualiser using Python",
-    "picture": "unFeaturedProjects/astar_Hari_Bhandari.png",
-    "demo": "https://github.com/hari-bhandari/Astar-visualiser",
-    "github": "https://github.com/hari-bhandari/Astar-visualiser"
-  },
-  {
-    "title": "Mcdonalds Schedule",
-    "picture": "unFeaturedProjects/mcdonalds_Hari_Bhandari.png",
-    "demo": "https://mcdonalds-schedule.herokuapp.com/",
-    "github": "https://github.com/hari-bhandari/Mcdonalds-schedule.git"
-  },
-  {
-    "title": "IP-API",
-    "picture": "unFeaturedProjects/ip_Hari_Bhandari.png",
-    "demo": "https://ip-api.me",
-    "github": "https://github.com/hari-bhandari/IP_INFO.git"
-  },
-  {
-    "title": "Car info",
-    "picture": "unFeaturedProjects/car_Hari_Bhandari.png",
-    "demo": "https://fervent-gates-2b2a03.netlify.app/",
-    "github": "https://github.com/hari-bhandari/car-info"
-  },
-  {
-    "title": "Cors Bypasser",
-    "picture": "unFeaturedProjects/cors_Hari_Bhandari.png",
-    "demo": "https://no--cors.herokuapp.com/",
-    "github": "https://github.com/hari-bhandari/cors-bypasser-express.git"
-  },
-  {
-    "title": "Corona Virus Tracker",
-    "picture": "unFeaturedProjects/corona_Hari_Bhandari.png",
-    "demo": "https://sad-newton-0e0adb.netlify.app/",
-    "github": "https://github.com/hari-bhandari/cors-bypasser-express.git"
+    "demo": "https://www.credential.net/79d334e6-0c15-47d3-9c11-0ac94c18df72",
   }
 ]
