fix add certification

--- a/src/json/unFeaturedProjects.json
+++ b/src/json/unFeaturedProjects.json
@@ -2,6 +2,6 @@
   {
     "title": "Associate Cloud Engineer",
     "picture": "unFeaturedProjects/devCamper_Hari_Bhandari.png",
-    "demo": "https://www.credential.net/79d334e6-0c15-47d3-9c11-0ac94c18df72",
+    "demo": "https://www.credential.net/79d334e6-0c15-47d3-9c11-0ac94c18df72"
   }
 ]
