--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -12,16 +12,28 @@
     "url": "https://whistleblowing.bankraya.co.id"
   },
   {
-    "title": "SORTING ALGORITHM VISUALISER",
-    "description": "Introducing the Sorting Algorithm Visualiser, a dynamic React app designed to illustrate 5 sorting algorithms in a visual manner. This tool was created with the intention of helping students better understand the concept of sorting algorithms, making it easier for them to grasp the techniques involved. With its lightning-fast performance and seamless responsiveness across devices, it's the perfect tool for anyone looking to improve their understanding of sorting algorithms.",
-    "demo": "https://sort-visualiser.netlify.app/",
-    "url": "https://sort-visualiser.netlify.app/"
+    "title": "Elearning Bank Raya",
+    "description": "Portal limited to Admins and Editors Raya Bank e-Learning. This application consists of 1 backend, 1 frontend, and 1 mobile application. I am the devops engineer for this project.",
+    "demo": "https://elearning.bankraya.co.id",
+    "url": "https://elearning.bankraya.co.id"
   },
 
   {
-    "title": "Store My Contacts",
-    "description": "Introducing SMC - the ultimate solution for managing your contacts. No more losing important phone numbers, emails, or addresses. With SMC, you can easily keep all your contacts in one centralized location. Designed for ease of use, this application was created with my mum in mind, who was struggling to keep her contacts organized. Built with React, MongoDB, and Node.js (including authentication), SMC provides a secure and user-friendly platform for managing your contacts. Best of all, it's hosted on Heroku and accessible from anywhere, making it the perfect solution for anyone looking to simplify their contact management.",
-    "demo": "https://storemycontacts.herokuapp.com/",
-    "url": "https://storemycontacts.herokuapp.com/"
-  }
+    "title": "Pinang Maksima",
+    "description": "Productive Loan Application based on Supply Chain ecosystem for business partners from Fintech / Aggregator / BRI Group Corporations / Partner Companies / E-commerce. I am the devops engineer for this project.",
+    "demo": "https://webview-pinang-maksima-pre-prod.bankraya.co.id",
+    "url": "https://webview-pinang-maksima-pre-prod.bankraya.co.id"
+  },
+  {
+    "title": "API SDM Mobile",
+    "description": "API for online attendance from the mobile app Jagat Raya.",
+    "demo": "https://api.sdm-mobile.bankraya.co.id",
+    "url": "https://api.sdm-mobile.bankraya.co.id"
+  },
+  {
+    "title": "Pinang Ritel",
+    "description": "Productive Loan Application based on Supply Chain ecosystem for business partners from Fintech / Aggregator / BRI Group Corporations / Partner Companies / E-commerce. I am the devops engineer for this project.",
+    "demo": "https://api.pinang-ritel.bankraya.co.id",
+    "url": "https://api.pinang-ritel.bankraya.co.id"
+  },
 ]
