--- a/src/json/unFeaturedProjects.json
+++ b/src/json/unFeaturedProjects.json
@@ -1,12 +1,12 @@
 [
   {
     "title": "Google Cloud Associate Cloud Engineer",
-    "picture": "unFeaturedProjects/devCamper_Hari_Bhandari.png",
+    "picture": "unFeaturedProjects/ace.png",
     "credential": "https://www.credential.net/79d334e6-0c15-47d3-9c11-0ac94c18df72"
   },
   {
     "title": "Digital Transformation with Google Cloud",
-    "picture": "unFeaturedProjects/budget_Hari_Bhandari.png",
+    "picture": "unFeaturedProjects/Digital Transformation With Google Cloud.png",
     "credential": "https://www.cloudskillsboost.google/public_profiles/30278e4d-3e7a-46a6-bc73-51b3e5c84e65/badges/3159187"
   }
 ]
